--- a/src/locales/translations/pt-BR.json
+++ b/src/locales/translations/pt-BR.json
@@ -5,11 +5,11 @@
     "header_contact": "Contato"
   },
   "HomePage": {
-    "home_page_search": "Pesquisar os itens do menu...",
-    "Basket": {
-      "home_basket_title": "Carrinho",
-      "home_basket_empty": "Seu carrinho está vazio"
-    }
+    "home_page_search": "Pesquisar os itens do menu..."
+  },
+  "Basket": {
+    "home_basket_title": "Carrinho",
+    "home_basket_empty": "Seu carrinho está vazio"
   },
   "ProductModal":{
     "product_select_choices":"Escolha uma opção"
