--- a/src/locales/translations/pt-BR.json
+++ b/src/locales/translations/pt-BR.json
@@ -5,13 +5,15 @@
     "header_contact": "Contato"
   },
   "HomePage": {
-    "home_page_search": "Pesquisar os itens do menu..."
+    "home_page_search": "Search item on menu..."
   },
   "Basket": {
-    "home_basket_title": "Carrinho",
-    "home_basket_empty": "Seu carrinho está vazio"
+    "basket_title": "Carrinho",
+    "basket_empty": "Seu carrinho está vazio",
+    "basket_total": "Total",
+    "basket_sub_total": "Sub total"
   },
-  "ProductModal":{
-    "product_select_choices":"Escolha uma opção"
+  "ProductModal": {
+    "product_select_choices": "Escolha uma opção"
   }
 }
