--- a/src/locales/translations/en-US.json
+++ b/src/locales/translations/en-US.json
@@ -1,19 +1,21 @@
 {
   "Header": {
     "header_menu": "Menu",
-    "header_login": "Entrar",
-    "header_contact": "Contato"
+    "header_login": "Login",
+    "header_contact": "Contact"
   },
   "HomePage": {
     "home_page_search": "Search item on menu..."
   },
   "Basket": {
-    "basket_title": "Carrinho",
-    "basket_empty": "Seu carrinho está vazio",
+    "basket_title": "Basket ",
+    "basket_empty": "Your basket is empty",
     "basket_total": "Total",
-    "basket_sub_total": "Sub total"
+    "basket_sub_total": "Sub total",
+    "backet_checkout": "Checkout Now",
+    "backet_add_extra_instructions": "Add extra instructions"
   },
   "ProductModal": {
-    "product_select_choices": "Escolha uma opção"
+    "product_select_choices": "Choose one option"
   }
 }
