--- a/src/locales/translations/pt-BR.json
+++ b/src/locales/translations/pt-BR.json
@@ -11,7 +11,9 @@
     "basket_title": "Carrinho",
     "basket_empty": "Seu carrinho está vazio",
     "basket_total": "Total",
-    "basket_sub_total": "Sub total"
+    "basket_sub_total": "Sub total",
+    "backet_checkout": "Checkout Now",
+    "backet_add_extra_instructions": "Add extra instructions"
   },
   "ProductModal": {
     "product_select_choices": "Escolha uma opção"
